[project]
name = "nuclear-in-space-github-io"
version = "0.1.0"
description = "One of the world’s few libraries dedicated to space nuclear technology and related developments, serving as a knowledge-base."
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
docs = [
    "mkdocs-material>=9.7.0",
]
